--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
     "paths": {
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
+      "@assets/*": ["src/assets/*"],
+
     } 
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
