--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "path": "^0.12.7",
     "unicode": "^14.0.0",
     "unidecode": "^0.1.8",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
